; ModuleID = '/home/carl/AnghaBench/arduino-esp32/libraries/SD/src/extr_sd_diskio_crc.c_CRC7.c'
source_filename = "/home/carl/AnghaBench/arduino-esp32/libraries/SD/src/extr_sd_diskio_crc.c_CRC7.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@m_CRC7Table = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @CRC7(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i8 0, i8* %5, align 1
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %26, %2
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %29

11:                                               ; preds = %7
  %12 = load i8*, i8** @m_CRC7Table, align 8
  %13 = load i8, i8* %5, align 1
  %14 = sext i8 %13 to i32
  %15 = shl i32 %14, 1
  %16 = load i8*, i8** %3, align 8
  %17 = load i32, i32* %6, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i8, i8* %16, i64 %18
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = xor i32 %15, %21
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %12, i64 %23
  %25 = load i8, i8* %24, align 1
  store i8 %25, i8* %5, align 1
  br label %26

26:                                               ; preds = %11
  %27 = load i32, i32* %6, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %6, align 4
  br label %7

29:                                               ; preds = %7
  %30 = load i8, i8* %5, align 1
  ret i8 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
